# pm-stat-gen-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
dataSets/csv/Stadium1Data/Test/: GymLeaderCastleRentals.csv  PetitCupRentals.csv  PikaCupRentals.csv  PokeCupRentals.csv  PrimeCupRentals.csv
dataSets/xlsx/: testDataStadium1.xlsx
pmdb/: pmdb.sql
scripts/: initialize.py  run_project.sh  setup.sh
src/: api.py  main.py
src/common/: constants.py  dataframe_utils.py  filePathMethods.py  utils.py
src/dataImport/: stadiumConverter.py
src/migrations/: initialize.py
src/pmabilities/: abilities.py  pm_ability_relations.py
src/pmalchemy/: alchemy.py
src/pmdex/: evolutions.py  pmdex.py  pmforms.py  pmspecifics.py  pmsummary.py
src/pmdex/nametypedicts/: gen1dict.py
src/pmgens/: genenum.py  generations.py  pmgames.py  pmgen.py
src/pmnatures/: nature_relevant_stats.py  natures.py
src/pmstats/: basestats.py
src/pmtypes/: pmtypes.py  typecharts.py  typerelations.py
src/scripts/: initialize.py
